# altaritegs

./: README.md  TASKS.md  metadata.json  package-lock.json  package.json  server.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  ws_server.rs
src/components/: AnalyticsView.tsx  ChecklistsView.tsx  DeviceSimulator.tsx  IntegrationsSettingsView.tsx  PatchbayView.tsx  ProducerDashboard.tsx  ServicePlanView.tsx  SetupWizard.tsx  TrainingView.tsx
src/data/: mockData.ts
src/hooks/: useWakeLock.ts
src/lib/: tauri-api.ts
