[package]
name = "altarite"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
lazy_static = "1.4"
tokio-stream = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
